# unifi-protect-viewer

./: .gitignore  README.md  SECURITY.md  package-lock.json  package.json
.github/workflows/: build.yml  repository.yml
docs/: RELEASING.md  STORE_DEPLOYMENT.md
scripts/: build.js  release.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: bridge.js  lib.rs  main.rs
src/html/: config.html  debug-block.js  index.html  profile-select.html  shared.css
src/js/: preload.js
src/js/liveview/: login.js  overlay.js  utils.js  v4.js
test/js/: preload.test.js  tauri-bridge.test.js  tauri-native.test.js  version-info-box.test.js
test/js/liveview/: dom.test.js
