[package]
name = "unifi-protect-viewer"
version = "1.1.1"
description = "Distraction-free fullscreen liveview for UniFi Protect"
authors = ["Sebastian Loer"]
license = "MIT"
edition = "2021"

[lib]
name = "unifi_protect_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11.3", features = ["tray-icon", "devtools"] }
url = "2"

