[package]
name = "unifi-protect-viewer"
version = "1.2.1"
description = "Distraction-free fullscreen liveview for UniFi Protect"
authors = ["Sebastian Loer"]
license = "MIT"
edition = "2021"

[lib]
name = "unifi_protect_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11.3", features = ["tray-icon", "devtools"] }
tauri-plugin-autostart = "2.5.1"
tauri-plugin-single-instance = "2"
url = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Security_Cryptography", "Win32_System_SystemInformation", "Win32_UI_Input_KeyboardAndMouse"] }
